#232 基于Hystrix的系统保护，初始化演示