@@ -24,8 +24,9 @@ public class ShowcaseServer {
 		JettyFactory.setTldJarNames(server, TLD_JAR_NAMES);
 
 		try {
-			server.start();
+			System.out.println("[HINT] Don't forget to set -XX:MaxPermSize=128m");
 
+			server.start();
 			System.out.println("Server running at http://localhost:" + PORT + CONTEXT);
 			System.out.println("[HINT] Hit Enter to reload the application quickly");
 
